--- a/EsercitazioneControlloAccessi/wwwroot/Website/Assets/RegistrazioneUtenteR.css
+++ b/EsercitazioneControlloAccessi/wwwroot/Website/Assets/RegistrazioneUtenteR.css
@@ -1,16 +1,81 @@
 
-body {
+body, html {
+    height: 100%;
+    width: 100%;
+    margin: 0 ;
+    padding: 0 ;
     display: flex;
-    justify-content: center;   /* Centra orizzontalmente */
-    align-items: center;       /* Centra verticalmente */
-    height: 100vh;             /* Imposta l'altezza del body al 100% della finestra */
-    margin: 0;                 /* Rimuovi margini predefiniti del body */
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
-.main 
-{
-    padding: 20px;
-    border: 1px solid black;
+.main {
+    text-align: center;
+    width: 40%;
+    height: 50%;
+    display: flex;
     background-color: lightblue;
-    font-size: 20px;
+    border: 1px solid black;
+    flex-direction: column;
+}
+.header {
+    width: 40%;
+    height: 10%;
+    background-color: red;
+    align-items: center;
+    text-align: center;
+}
+.header ul {
+    margin-top:30px;
+    }
+.main h1{
+    text-align: center;
+    font-size: 30px;
+    color: black;
+    margin-top: 10px;
+}
+.header ul li a {
+    padding: 10px 30px;
+    border-radius: 5px;
+    width: 30px;
+    height: 50%;
+    text-decoration: none;
+    background-color: lightsteelblue;
+}
+
+.header, ul li {
+    
+    display: inline-block;
+    list-style-type: none;
+    align-items: center;
+}
+.main select{
+    margin-top:20px;
+    margin-left:5px;
+    padding:10px;
+    border-radius:5px;
+}
+.footholder {
+    margin-top:auto;
+    width: 100%;
+    height: 20%;
+    background-color: yellow;
+}
+.footholder ul li a {
+    padding:10px 30px;
+    border-radius: 5px;
+    width: 30px;
+    height: 50%;
+    text-decoration: none;
+    background-color: lightsteelblue;
+}
+
+.footholder ul li {
+    margin-top:10px;
+    color: black;
+    display: inline-block;
+    list-style-type: none;
+    border-radius: 2px;
+    align-items: center;
 }
